# DevConnect-backend

./: .env.example  .gitignore  .pre-commit-config.yaml  DockerFile  MakeFile  Makefile  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/core/: config.py
app/tests/: test_health.py
