[tool.poetry]
name = "DevConnect"
version = "0.1.0"
description = "Backend scaffold"
authors = ["DevConnect <amin.rahimzadeh48@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
sqlalchemy = "^2.0.0"
sqlmodel = "^0.0.19"
databases = "^0.9.0"
asyncpg = "^0.29.0"
aioredis = "^2.0.1"
redis = "^5.0.0"
celery = { extras = ["redis"], version = "^5.3.0" }
dramatiq = "^1.15.0"
httpx = "^0.27.0"
alembic = "^1.13.0"
pydantic = "^2.7.0"
minio = "^7.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-mock = "^3.12.0"
mypy = "^1.10.0"
ruff = "^0.5.0"
black = "^24.0.0"
isort = "^5.13.0"
pre-commit = "^4.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"